feat(phase-2): implement k-means color quantization

--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
                 </div>
             </div>
 
-            <div class="control-group disabled-group">
+            <div class="control-group">
                 <div class="label-row">
                     <label class="control-label">Colors</label>
-                    <span class="value-display">16</span>
+                    <span id="colorCountValue" class="value-display">16</span>
                 </div>
-                <input type="range" disabled class="slider">
+                <input type="range" id="colorCount" min="2" max="64" value="16" class="slider">
             </div>
 
             <div class="action-area">
